--- a/test.ipynb
+++ b/test.ipynb
@@ -15,23 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'abv_gt': 200, 'brewed_before': '08-2024'}\n",
-      "-----------------\n",
-      "Error: Invalid number format, abv_gt is above 100\n",
-      "Error: Invalid date format, brewed_before is not in mm-yyyy format Q\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "example_single = \"Find me a beer brewed before 08-2024 with ABV more than 200.\" \n",
+    "example_single = \"I'm searching for beers with ABV greater than 6%, IBU less than 80, EBC greater than 15, brewed after 01-2025, using yeast named Brettanomyces, hops named Nugget, malt named Chocolate, that go well with fish_and_chips, and named Punk_IPA.\"\n",
     "processed_text = extract_params(example_single)\n",
     "# print('*' + processed_text)\n",
     "processed_text = process_model_output(processed_text)\n",
@@ -39,13 +27,13 @@
     "processed_text = loads(processed_text)\n",
     "print(str(processed_text))\n",
     "print('-----------------')\n",
-    "processed_text = filter_json(processed_text)\n",
-    "print(str(processed_text))"
+    "processed_text_filtered, errors = filter_json(processed_text)\n",
+    "print(str(processed_text_filtered), errors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,26 +46,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/5 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
    "source": [
     "examples_list = []\n",
     "case_list = []\n",
     "output_list = []\n",
+    "output_filtered_list = []\n",
+    "error_list = []\n",
     "\n",
-    "for i in tqdm(range(100)):\n",
-    "    examples_list.append(examples[i])\n",
+    "for i in tqdm(range(5)):\n",
+    "    examples_list.append(examples_processed[i])\n",
     "    case_list.append(examples_cases[i])\n",
     "    count = 0\n",
     "    while count < 2:\n",
     "        try:\n",
-    "            output_list.append(filter_json(loads(process_model_output(extract_params(examples_processed[i])))))\n",
+    "            processed_text = loads(process_model_output(extract_params(examples_processed[i])))\n",
+    "            processed_text_filtered, errors = filter_json(processed_text)\n",
+    "            output_list.append(processed_text)\n",
+    "            output_filtered_list.append(processed_text_filtered)\n",
+    "            error_list.append(errors)\n",
     "            count = 2\n",
     "        except:\n",
     "            count += 1\n",
     "            if count == 2:\n",
     "                output_list.append(\"{}\")\n",
+    "                output_filtered_list.append(\"{}\")\n",
+    "                error_list.append(\"\")\n",
     "            continue"
    ]
   },
@@ -87,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.DataFrame({\"Example\": examples_list, \"Edge_Case\": case_list, \"Output\": output_list}).to_csv(\"test_results_v4.csv\", index=True)"
+    "pd.DataFrame({\"Example\": examples_list, \"Edge_Case\": case_list, \"Output\": output_list, \"Filtered_Output\": output_filtered_list, \"Errors\": error_list})"
    ]
   },
   {
@@ -96,54 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for sample in output_list:\n",
-    "    try:\n",
-    "        json_input = loads(sample)\n",
-    "        json_input = {key: json_input[key] for key in json_input.keys() if key in [\"abv_gt\", \"abv_lt\", \"ibu_gt\", \"ibu_lt\", \"ebc_gt\", \"ebc_lt\", \"brewed_before\", \"brewed_after\"]}\n",
-    "        json_input = {key: json_input[key] for key in json_input.keys() if json_input[key] is not None}\n",
-    "        json_input = {key: json_input[key] for key in json_input.keys() if json_input[key] != \"\"}\n",
-    "        json_input = {key: json_input[key] for key in json_input.keys() if json_input[key].strip() != \"\"}\n",
-    "        if \"brewed_before\" in json_input.keys():\n",
-    "            if len(json_input[\"brewed_before\"].split(\"-\")) != 2:\n",
-    "                json_input.pop(\"brewed_before\")\n",
-    "            elif len(json_input[\"brewed_before\"].split(\"-\")[0]) != 2 or len(json_input[\"brewed_before\"].split(\"-\")[1]) != 4:\n",
-    "                json_input.pop(\"brewed_before\")\n",
-    "        if \"brewed_after\" in json_input.keys():\n",
-    "            if len(json_input[\"brewed_after\"].split(\"-\")) != 2:\n",
-    "                json_input.pop(\"brewed_after\")\n",
-    "            elif len(json_input[\"brewed_after\"].split(\"-\")[0]) != 2 or len(json_input[\"brewed_after\"].split(\"-\")[1]) != 4:\n",
-    "                json_input.pop(\"brewed_after\")\n",
-    "\n",
-    "        # check the mm is below 13 and yyyy is below current date\n",
-    "        if \"brewed_before\" in json_input.keys():\n",
-    "            if int(json_input[\"brewed_before\"].split(\"-\")[0]) > 12 or int(json_input[\"brewed_before\"].split(\"-\")[1]) > 2023:\n",
-    "                json_input.pop(\"brewed_before\")\n",
-    "\n",
-    "        if \"brewed_after\" in json_input.keys():\n",
-    "            if int(json_input[\"brewed_after\"].split(\"-\")[0]) > 12 or int(json_input[\"brewed_after\"].split(\"-\")[1]) > 2023:\n",
-    "                json_input.pop(\"brewed_after\")\n",
-    "        \n",
-    "        print(json_input)\n",
-    "    except:\n",
-    "        print('error', sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_output_json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query_string = \"&\".join([f\"{key}={value}\" for key, value in model_output_json.items()])"
+    "query_string = \"&\".join([f\"{key}={value}\" for key, value in output_filtered_list.items()] + [f\"per_page={per_page}\"])"
    ]
   },
   {
@@ -161,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "content = get_webpage_content(\"https://api.punkapi.com/v2/beers?\" + 'hops=hoppy')\n",
+    "content = get_webpage_content(\"https://api.punkapi.com/v2/beers?\" + query_string)\n",
     "content = loads(content)"
    ]
   },
