--- a/test.ipynb
+++ b/test.ipynb
@@ -16,9 +16,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*{\n",
+      "\"abv_gt\": \"5\",\n",
+      "\"abv_lt\": None,\n",
+      "\"ibu_gt\": None,\n",
+      "\"ibu_lt\": None,\n",
+      "\"ebc_gt\": None,\n",
+      "\"ebc_lt\": \"20\",\n",
+      "\"brewed_before\": None,\n",
+      "\"brewed_after\": \"01-2025\",\n",
+      "\"beer_name\": None,\n",
+      "\"yeast\": \"Brettanomyces\",\n",
+      "\"hops\": None,\n",
+      "\"malt\": None,\n",
+      "\"food\": None\n",
+      "}\n",
+      "**{\n",
+      "\"abv_gt\": \"5\",\n",
+      "\"abv_lt\": '',\n",
+      "\"ibu_gt\": '',\n",
+      "\"ibu_lt\": '',\n",
+      "\"ebc_gt\": '',\n",
+      "\"ebc_lt\": \"20\",\n",
+      "\"brewed_before\": '',\n",
+      "\"brewed_after\": \"01-2025\",\n",
+      "\"beer_name\": '',\n",
+      "\"yeast\": \"Brettanomyces\",\n",
+      "\"hops\": '',\n",
+      "\"malt\": '',\n",
+      "\"food\": ''\n",
+      "}\n",
+      "{'abv_gt': '5', 'abv_lt': '', 'ibu_gt': '', 'ibu_lt': '', 'ebc_gt': '', 'ebc_lt': '20', 'brewed_before': '', 'brewed_after': '01-2025', 'beer_name': '', 'yeast': 'Brettanomyces', 'hops': '', 'malt': '', 'food': ''}\n",
+      "-----------------\n",
+      "{'abv_gt': '5', 'ebc_lt': '20', 'brewed_after': '01-2025'} Error: Invalid date format, brewed_after is in the future and it should be in mm-yyyy format\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "example_single = \"I need beers that have an EBC less than 20, brewed after 01-2025, with an ABV of more than 5%, and yeast named Brettanomyces.\"\n",
     "processed_text = extract_params(example_single)\n",
